syntax = "proto3";

option java_package = "com.jkramr.demowalletapi.grpc";

service RegisterService {
    //this call is idempotent: multiple calls will have the same outcome as single call
    rpc Register (RegisterRequest) returns (RegisterResponse) {}
}

message RegisterRequest {
    int32 user_id = 1;
}

message RegisterResponse {
    enum ResponseCode {
        OK = 0;
        INVALID_REQUEST = 1;
        SERVER_ERROR = 999;
    }
    ResponseCode code = 1;
}